# balify

./: .gitignore  pyproject.toml
balify/: __init__.py  cli.py  decorators.py  generic_routes.py  resource.py  schemas.py  utils.py
benchmark/fastapi/: main.py
examples/helloworld/: README.md
examples/product/: .env.example  main.py
examples/users/: database.db  main.py
tests/: test_data.py  test_o.py  test_va.py
